--- a/styleguide.html
+++ b/styleguide.html
@@ -6,9 +6,9 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>H1</h1>
-        <h2>H2</h2>
-        <h3>H3</h3>
-        <p>Paragraph</p>
+        <h1>H1-overskrifter: Ansøg nu</h1>
+        <H2>H2-overskrifter: Nyheder</H2>
+        <p>Paragraph: Hvis du har studiestart til vinter og endnu ikke har modtaget en bolig, så har du mulighed for at blive en del af gruppe C, hvis du opfylder kravene senest d. 1 december 2022.</p>
+        <nav>Navigation: STUDIEBOLIG ODENSE, Søg bolig, ...</nav>
     </body>
 </html>
