--- a/styleguide.html
+++ b/styleguide.html
@@ -2,13 +2,33 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Style Guide</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Forside</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>H1-overskrifter: Ansøg nu</h1>
-        <H2>H2-overskrifter: Nyheder</H2>
-        <p>Paragraph: Hvis du har studiestart til vinter og endnu ikke har modtaget en bolig, så har du mulighed for at blive en del af gruppe C, hvis du opfylder kravene senest d. 1 december 2022.</p>
-        <nav>Navigation: STUDIEBOLIG ODENSE, Søg bolig, ...</nav>
+        <nav>
+            <h1>LOGO</h1>
+            <ul>
+                <li>Navigation</li>
+            </ul>
+            <button class="login">Log ind</button>
+        </nav>
+        <h2>H2</h2>
+        <p>Paragraph</p>
+        <div class="color-box">
+        <div class="medium-blue">
+        </div>
+        <div class="dark-blue">
+        </div>
+        <div class="dark-orange">
+        </div>
+        <div class="light-orange">
+        </div>
+        <div class="white">
+        </div>
+    </div>
+        <button class="apply-button">Ansøg-knap</button>
+        <footer>Footer with logo</footer>
     </body>
 </html>
