--- a/index.html
+++ b/index.html
@@ -8,27 +8,44 @@
     </head>
     <body>
         <nav>
-            <h1>LOGO</h1>
-            <ul>
-                <li>Navigation</li>
-            </ul>
-            <button class="login">Log ind</button>
+            <h1>STUDIEBOLIG ODENSE - STYLE GUIDE</h1>
         </nav>
-        <h2>H2</h2>
-        <p>Paragraph</p>
+        <main>
+        <div class="text-box">   
+            <h1>Header 1</h1>
+            <p>- Helvetica Neue Bold / #072F5F</p>
+        </div>
+        <div class="text-box">   
+            <h2>Header 2</h2>
+            <p>- Helvetica Neue Bold / #072F5F</p>
+        </div>
+        <div class="text-box">   
+            <p>Paragraph<p>
+            <p>- Helvetica Neue / #072F5F</p>
+        </div>
+    </main>
         <div class="color-box">
         <div class="medium-blue">
+            <p>#3895D3</p>
         </div>
         <div class="dark-blue">
+            <p>#1261A0</p>
+        </div>
+        <div class="darkest-blue">
+            <p>#072F5F</p>
         </div>
         <div class="dark-orange">
+            <p>#FF7F00</p>
         </div>
         <div class="light-orange">
+            <p>#FFB100</p>
         </div>
         <div class="white">
+            <p>#FFFFFF</p>
         </div>
     </div>
-        <button class="apply-button">Ansøg-knap</button>
-        <footer>Footer with logo</footer>
+        <button class="apply-button">Knap 1</button>
+        
+        <footer>FOOTER</footer>
     </body>
 </html>
