--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
         <div class="white">
             <p>#FFFFFF</p>
         </div>
-    </div>
+        </div>
         <button class="apply-button">Knap 1</button>
-        
+        <input type="submit" class="login-submit" value="Knap 2">
         <footer>FOOTER</footer>
+    </main>
     </body>
 </html>
